displaying footer correctly/responsively + fixed horizontal scrolling + nav menu - changed media size to max 768px

--- a/assets/common/css/style.css
+++ b/assets/common/css/style.css
@@ -4,6 +4,13 @@
  *******************
 */
 
+
+/* fix -> stop horizontal scrolling */
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 @font-face {
 	font-family: 'BebasNeue';
 	src: url('../fonts/bebas-neue-webfont.eot');
@@ -181,7 +188,7 @@ nav a {
 			z-index: 1000;
 		}
 	
-@media only screen and ( max-width: 40em ) { /* 640 */
+@media only screen and ( max-width: 768px ) {
 
 	.banner_slider {
 		display: none;
@@ -190,10 +197,6 @@ nav a {
 /* hack, would be better to fix the image */
 	.col-sm-5 > h1 > a {
 		width: 335px;
-	}
-
-	.lang > ul {
-		padding-left: 0px;
 	}
 
 /* nav menu */
@@ -308,6 +311,8 @@ nav a:hover {
 }
 */
 
+/* language selection */
+
 .lang {
 	height: 50px;
 	font-family: 'BebasNeue';
@@ -315,22 +320,23 @@ nav a:hover {
 	//margin-top: 20px;
 	margin-right: 15px;
 }
-
-.lang a {
-	color: #1eafb5;
-	padding: 10px;
-}
-
-.lang a:hover {
-	color: 00ffff;
-	background: #066685;
-	background-image: -webkit-linear-gradient(top, #19c2c8, #066685);
-	background-image: -moz-linear-gradient(top, #19c2c8, #066685);
-	background-image: -ms-linear-gradient(top, #19c2c8, #066685);
-	background-image: -o-linear-gradient(top, #19c2c8, #066685);
-	background-image: linear-gradient(to bottom, #19c2c8, #066685);
-	text-decoration: none;
-}
+	.lang a {
+		color: #1eafb5;
+		padding: 10px;
+	}
+	.lang a:hover {
+		color: 00ffff;
+		background: #066685;
+		background-image: -webkit-linear-gradient(top, #19c2c8, #066685);
+		background-image: -moz-linear-gradient(top, #19c2c8, #066685);
+		background-image: -ms-linear-gradient(top, #19c2c8, #066685);
+		background-image: -o-linear-gradient(top, #19c2c8, #066685);
+		background-image: linear-gradient(to bottom, #19c2c8, #066685);
+		text-decoration: none;
+	}
+	.lang > ul {
+		padding-left: 0px;
+	}
 
 .slash {
 	color: #1eafb5;
@@ -534,38 +540,32 @@ h2 span {
 */
 
 footer {
-	border-top: 1px solid #d1d1d1;
 	background-color: #0f201c;
 }
-
-footer ul {
-	padding-left: 0px;
-}
-
-footer nav {
-	float: left;
-//	margin-left: 10px;
-}
-
-footer nav a {
-	margin-left: 0px;
-	margin-right: 15px;
-}
-
-
-
-.soc_site {
-	font-family: 'BebasNeue';
-	margin-left: 50px;
-	margin-top: 34px;
-	margin-right: 15px;
-	height: 35px;
-	width: 311px;
-}
-
-.soc_site li {
-	margin-right: 15px;
-}
+	footer #nav {
+		width: 100%;
+		text-align: center;
+		float: none;
+	}
+		footer #nav > ul {
+			padding: 0px;
+		}
+			footer #nav > ul > li {
+				display: inline-block;
+				float: none;
+			}
+	footer .soc_site {
+		width: 100%;
+		//margin: 10px auto;
+		//float: none;
+		padding: 0px;
+		text-align: center;
+	}
+		footer .soc_site > li {
+			display: inline-block;
+			float: none;
+			margin: 0px 7.5px 0px 7.5px;
+		}
 
 /*
 *******************
@@ -573,10 +573,12 @@ footer nav a {
 *******************
 */
 
-.copyright {
+.copyright {	
+	text-align: center;
 	color: #1eafb5;
-	float: right;
-	margin-right: 7px;
+	width: 100%;
+	float: none;
+	margin: auto;
 	font-size: 14px;
 
 }
